<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/txt_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/area_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_txt_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectanglebox"
            android:ems="10"
            android:hint="@string/search_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHint="@color/hintColor">

            <requestFocus />
        </AutoCompleteTextView>

        <ImageButton
            android:id="@+id/clearTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:src="@drawable/icon_clear" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_looking_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/looking_for_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_txt_size" />

        <RadioGroup
            android:id="@+id/radioGrp_looking_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio_looking_for_any"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/any" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_occupancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/occupancy_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_txt_size" />

        <RadioGroup
            android:id="@+id/radioGrp_occupancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_occupancy_single"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/occupancy_single" />

            <RadioButton
                android:id="@+id/radio_occupancy_shared"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/occupancy_shared" />

            <RadioButton
                android:id="@+id/radio_occupancy_any"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/any" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/rent_range"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_txt_size" />

        <TextView
            android:id="@+id/price_range_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/default_price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_txt_size" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/price_range_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:max="2000"
        android:progress="350" />

    <Button
        android:id="@+id/btn_flat_mate_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundbtn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/submit"
        android:textColor="#ffff"
        android:textSize="16sp" />


</LinearLayout>